Remove subscribe button from home

--- a/index.hbs
+++ b/index.hbs
@@ -34,9 +34,9 @@ into the {body} of the default.hbs template --}}
     {{#if @custom.use_custom_cta}}
       <a href="{{@custom.custom_cta_url}}" class="m-button filled">{{@custom.custom_cta_text}}</a>
     {{else}}
-      {{#if @labs.members}}
+      {{!-- {{#if @labs.members}}
         <a href="{{@site.url}}/newsletter" class="m-button filled js-newsletter">{{t "Subscribe"}}</a>
-      {{/if}}
+      {{/if}} --}}
     {{/if}}
   </div>
   </section>
