--- a/partials/footer.hbs
+++ b/partials/footer.hbs
@@ -20,6 +20,12 @@ This footer template is shared across all the pages.
           <span class="icon-twitter" aria-hidden="true"></span>
         </a>
       {{/if}}
+      <a href="https://www.linkedin.com/in/abarajithan11" target="_blank" rel="noopener" aria-label="LinkedIn">
+        <span class="icon-linkedin" aria-hidden="true"></span>
+      </a>
+      <a href="https://github.com/abarajithan11" target="_blank" rel="noopener" aria-label="Github">
+        <span class="icon-github" aria-hidden="true"></span>
+      </a>
       <a href="{{@site.url}}/rss" aria-label="RSS">
         <span class="icon-rss" aria-hidden="true"></span>
       </a>
