Update fb comments: centered, 80% width, white background

--- a/post.hbs
+++ b/post.hbs
@@ -103,8 +103,10 @@ into the {body} of the default.hbs template --}}
 
         {{!-- If you want to embed comments, this is a good place to do it! --}}
           <section class="m-comments">
-            <div class="fb-comments" data-href="{{url absolute="true"}}" data-width="100%" data-numposts="10" data-colorscheme="dark"></div>
-            {{!-- <div class="fb-comments" data-href="https://aba-blog.xyz/sex-education-2016/" data-numposts="10" data-colorscheme="dark"></div> --}}
+            <div class="l-wrapper in-comments">
+              {{!-- <div class="fb-comments" data-href="https://aba-blog.xyz/sex-education-2016/" data-width="100%" data-numposts="10" data-colorscheme="light" style="background-color: white"></div> --}}
+              <div class="fb-comments" data-href="{{url absolute="true"}}" data-width="100%" data-numposts="10" data-colorscheme="light" style="background-color: white"></div>
+            </div>
           </section>
 
         {{!-- Email subscribe form at the bottom of the page --}}
